# yast-live-installer

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  README.md  RPMNAME  configure.in.in  yast2-live-installer.spec.in
agents/: Makefile.am
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: correct_live_for_reboot  correct_live_install  yast2-live-installer.changes  yast2-live-installer.spec
src/: LiveInstaller.ycp  Makefile.am  complex.ycp  dialogs.ycp  helps.ycp  inst_live_add_base_repo.ycp  inst_live_cleanup.ycp  inst_live_doit.ycp  inst_live_full_proposal.ycp  inst_live_pre-proposal.ycp  inst_live_prepare_net_test.ycp  inst_live_simple_proposal.ycp  inst_live_sw_select.ycp  inst_live_welcome.ycp  live-installer.desktop  live-installer.ycp  live_copy_files_finish.ycp  live_doit.ycp  live_runme_at_boot_finish.ycp  live_save_config_finish.ycp  wizards.ycp
src/clients/: inst_live_add_base_repo.rb  inst_live_cleanup.rb  inst_live_cleanup.ycp  inst_live_doit.rb  inst_live_full_proposal.rb  inst_live_pre-proposal.rb  inst_live_pre-proposal.ycp  inst_live_prepare_net_test.rb  inst_live_prepare_net_test.ycp  inst_live_simple_proposal.rb  inst_live_sw_select.rb  inst_live_sw_select.ycp  inst_live_welcome.rb  inst_live_welcome.ycp  live-installer.rb  live_copy_files_finish.rb  live_copy_files_finish.ycp  live_runme_at_boot_finish.rb  live_save_config_finish.rb
src/control/: Makefile.am  live-install.xml
src/desktop/: live-installer.desktop
src/modules/: LiveInstaller.rb  LiveInstaller.ycp
testsuite/tests/: LiveInstaller.out  LiveInstaller.rb  LiveInstaller.ycp
